american spelling and quote highlights

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -16,26 +16,26 @@ We understand the benefits of encouraging stable, safe and inclusive online comm
 Instinctively as a species we try to hide our vulnerabilities in fear of being seen less capable of doing ones role, or worst case being rejected by our community or group completely.
 This perspective of vulnerability can lead community managers down the isolated road of not being able to reach out to seek help when they need it. 
 The longer we don’t attend to our well being, prolonging treatment to our increasing negative symptoms, the larger the problem until eventually we are mentally and physically debilitated. 
-Often suffocating the fulfilment and joy we once had of the role or even the community that may take months, or even years to regain. 
+Often suffocating the fulfillment and joy we once had of the role or even the community that may take months, or even years to regain. 
 In fact, we may never regain that same level of purpose for them again.
 
 To help ourselves as community managers, and in turn help others, we need to learn how to spot the signs. 
-These signs can be subtle and hard to detect, but by identifying and acknowledging these changes in behaviour first and foremost in yourself, you can start to apply that same awareness to the community as a whole. 
+These signs can be subtle and hard to detect, but by identifying and acknowledging these changes in behavior first and foremost in yourself, you can start to apply that same awareness to the community as a whole. 
 This experience can provide insight to developing and building up social norms and mechanisms for the community to help reduce the occurrence and impact of burnout thus promoting a physically and mentally healthy, more productive community.
 
 == Importance of Self-Care
 
-What exactly is self-care? The WHO (World Health Organisation) definition of self-care is:
+What exactly is self-care? The WHO (World Health Organization) definition of self-care is:
 
-"Self-care is the ability of individuals, families and communities to promote health, prevent disease, maintain health, and to cope with illness and disability with or without the support of a healthcare provider"
+> "Self-care is the ability of individuals, families and communities to promote health, prevent disease, maintain health, and to cope with illness and disability with or without the support of a healthcare provider"
 
 This, in a nutshell, is us making a conscious and mindful effort to perform activities that aid in our physical, emotional, relational, and perhaps spiritual well-being at a fundamental level.
 
-Most of us already practise self-care daily by ensuring that we are functional and taking actions to protect our overall health, for example eating healthy, exercising and getting enough sleep. 
+Most of us already practice self-care daily by ensuring that we are functional and taking actions to protect our overall health, for example eating healthy, exercising and getting enough sleep. 
 However sometimes we can find that these acts are not sufficient to solely maintain our well being and thus a conscious effort and additional support is required.
 
 When we are in a happy state in mind we can usually handle stressors more effectively. 
-So by practising self-care we can build a resilience to those stressors in life that you can’t eliminate.
+So by practicing self-care we can build a resilience to those stressors in life that you can’t eliminate.
 
 This concept of self-care may appear to be simplistic in theory but it is so commonly overlooked or neglected especially by community managers. 
 We explore some of those reasons and deconstruct them.
@@ -64,18 +64,18 @@ In order to bring out the best in others we must bring our best to the table.
 
 As leaders we have the ability to wield immense power to make positive changes in our community along with the support of our followers. 
 Let's use this power.
-Take the opportunity to utilise your influence to encourage and promote self-care for the benefit of not only your community members but also for yourself.
+Take the opportunity to utilize your influence to encourage and promote self-care for the benefit of not only your community members but also for yourself.
 
 
 Educate yourself on what self-care looks like to you and communicate that with your team. We don’t need to share our intimate fears or anxieties, but it is important to start the conversation on how self-care can be beneficial not only to the team running the community, but for the overall healthy of the community.
 
-Recognise and implement regular dedicated time in your and the team’s workload to practise self-care. 
+Recognize and implement regular dedicated time in your and the team’s workload to practice self-care. 
 Set realistic expectations on deliverables and communicate frequently within the team potential triggers of stress or strain that may require more downtime to focus on one’s physical and mental health.
 
 By taking steps towards actively promoting and advocating for self-care you not only prompt members to follow suit led by example, but it also helps remove the stigma of leaders being invulnerable by revealing a more human side to you.
 
 === Being Human
-We can often find ourselves being controlled by our own, or by other’s, generalisation of what a community manager should be: driven, friendly, successful, super human, or perfect even. 
+We can often find ourselves being controlled by our own, or by other’s, generalization of what a community manager should be: driven, friendly, successful, super human, or perfect even. 
 
 However, the list of what a leader should be is long, contradicting and often fundamentally flawed. 
 A leader can be many things to many people but the most important aspect is that they are human: flaws and all. 
@@ -98,23 +98,23 @@ Our passion and attention is directed in a constructive and purposeful manner, t
 
 The term “bring your whole self to work” is a good expression of allowing yourself this forgiveness. 
 We feel we can admit when we don’t know something, the right decision or simply acknowledging when we’ve made a mistake. 
-But it also can be applied to recognising and accepting that we can have good and bad days. 
+But it also can be applied to recognizing and accepting that we can have good and bad days. 
 
 Being honest with ourselves is as important as being honest with the community. 
 Needing to admit that we may not be at our best and detracting yourself from unintentionally escalating  difficult situations into becoming worse situations would be the best choice to make at those times for the community.
 
-This emotional labour can be extremely exhausting to maintain. 
+This emotional labor can be extremely exhausting to maintain. 
 We must acknowledge and accept that being perfect is unattainable, and more importantly, not required to be the best leader. 
 What is important is that people can relate to your human side.
 
 People gravitate to those that they share a kinship with and being able to identify this is one of the characteristics of a good community manager. 
-If your members see that you have qualities that they can relate to, it helps them to more easily empathise with you. 
+If your members see that you have qualities that they can relate to, it helps them to more easily empathize with you. 
 Funnily, we usually try to highlight the significance of our empathy for our members or team, but it’s equally important that our members demonstrate compassion, and gratitude to us too.
 
 Nurturing this empathy, from both sides, will help to develop deeper connections and trust between members and team, which in turn can help establish an informal social support network. 
-This network can be a conduit to promoting the importance of self-care, creating judgement free zone or providing safe havens to individual members, including yourself, to reflect on emotions, frustrations or workload.
+This network can be a conduit to promoting the importance of self-care, creating judgment free zone or providing safe havens to individual members, including yourself, to reflect on emotions, frustrations or workload.
 
-It is inevitable that some members will expect you to adhere to the pretence of being the all powerful, infallible captain of the ship, but with an effective self-care routine and the backing of the members within the social support network you will be able to feel more confident in yourself to handle those stressors and that your vulnerabilities are what makes you a better leader to the community.
+It is inevitable that some members will expect you to adhere to the pretense of being the all powerful, infallible captain of the ship, but with an effective self-care routine and the backing of the members within the social support network you will be able to feel more confident in yourself to handle those stressors and that your vulnerabilities are what makes you a better leader to the community.
 
 == Types of Self-Care
 
@@ -122,7 +122,7 @@ Self-care is unique to each person as well as depending on our moods and circums
 
 There are a number of different types of self-care that aim to satisfy our basic( as well as deeper) needs to promote a healthy and happy mind and body. These are: *physical*, *mental*, *spiritual*, *emotional*, and *social*.
 
-It is important to remember that we should be aiming to practise a selection of activities from all types to provide yourself a good balance to help you adapt to all types of stress.
+It is important to remember that we should be aiming to practice a selection of activities from all types to provide yourself a good balance to help you adapt to all types of stress.
 
 === Physical Self-Care
 
@@ -145,7 +145,7 @@ A few examples of physical self-care:
 
 Mental self-care is the act of stimulating our mind with positive and purposeful thoughts to help reduce stress levels.
 
-These are doing things that keep the mind engage at an intellectual level on topics that interest you or help de-clutter your thoughts to re-organise them.
+These are doing things that keep the mind engage at an intellectual level on topics that interest you or help de-clutter your thoughts to re-organize them.
 
 Mental self-care is often less tangible than other types so it can be more difficult to see an immediate benefit.
 
@@ -157,7 +157,7 @@ A few examples of mental self-care:
 - Try a hobby or interest
 - Write a list of goals
 - Solving puzzles
-- Organise or clean out a space in your room
+- Organize or clean out a space in your room
 
 === Spiritual Self-Care
 
@@ -182,9 +182,9 @@ By ignoring our physical and mental well being we will be more likely to succumb
 
 == Burnout
 
-What exactly is burnout? The WHO (World Health Organisation) definition of burnout is:
+What exactly is burnout? The WHO (World Health Organization) definition of burnout is:
 
-“Burnout is a syndrome conceptualized as resulting from chronic workplace stress that has not been successfully managed. ”
+> “Burnout is a syndrome conceptualized as resulting from chronic workplace stress that has not been successfully managed. ”
 
 Burnout can affect us all and in any occupation, however it seems more prevalent in roles that are mentally and emotionally draining for extended periods of time. 
 This is common due to the prevailing norms within those roles of being selfless and putting others first: going the extra mile to maintain a happy and content environment or atmosphere either for the client or within a community. 
@@ -203,7 +203,7 @@ This is because the two are similar until it becomes too late and has developed 
 Psychologist Herbert Freudenberger has released multiple books and articles regarding his research of the possible causes, implications and affects of burnout since the 1970’s.
 His work has helped to define the different symptoms and thus the phases of experiencing burnout.
 
-Perhaps you recognise several of them in yourself; perhaps you recognise only one or two. 
+Perhaps you recognize several of them in yourself; perhaps you recognize only one or two. 
 It’s not always easy to see the signs since not only do they gradually occur over time, but also hide behind our own denial of something being wrong.
 
 *Exhaustion*
@@ -230,7 +230,7 @@ This can lead to loneliness and isolation.
 
 Once you’ve become more detached from the things that excited you, you find it increasingly hard to remain interested in what’s going on around you. 
 You begin to question the value of your activities, your relationships, and perhaps the bigger aspects of your life. 
-This can lead you to becoming sceptical or even suspicious of other people’s motives and causes.
+This can lead you to becoming skeptical or even suspicious of other people’s motives and causes.
 
 *Impatience and heightened irritability*
 
@@ -261,14 +261,14 @@ This feeling can lead to being bitter and angry.
 
 Leading from the signs of feeling unappreciated to feeling as though the world is against us. 
 When things go wrong, but we are unable to understand or see why, we tend to seek out a target, not ourselves, to blame regardless if there is little merit in the accusation. 
-Often the person labelled as the culprit becomes the target of our frustrations. 
+Often the person labeled as the culprit becomes the target of our frustrations. 
 This can be team members, friends or even family.
 
 *Disorientation*
 
 Disorientation is when we feel we’ve become separated from our environment and understanding of what is going on around us. 
 Discovering yourself in a situation that you didn’t become aware of or that you previously understood a concept but now do not. 
-We see ourselves starting to forget things easily and our concentration span deteriorates leading us into more confusion and agitation, fuelling the other symptoms like paranoia.
+We see ourselves starting to forget things easily and our concentration span deteriorates leading us into more confusion and agitation, fueling the other symptoms like paranoia.
 
 *Psychosomatic complaints*
 
@@ -278,10 +278,10 @@ Sometimes these illnesses mask the deeper more emotional stress that we feel but
 
 === Burnout cycle
 
-Freudenberger and his colleague Gail North later categorised the consequences of these symptoms into 12 phases of one developing burnout syndrome. 
+Freudenberger and his colleague Gail North later categorized the consequences of these symptoms into 12 phases of one developing burnout syndrome. 
 Similar to the symptoms, sufferers may experience episodes in multiple phases, not in sequential order, and for any length of period of time.
 
-. *A compulsion to prove oneself*: having the obsession to try and prove to self and to others their worth; tends to affect those that are eager to excel within the organisation and who accept responsibility readily.
+. *A compulsion to prove oneself*: having the obsession to try and prove to self and to others their worth; tends to affect those that are eager to excel within the organization and who accept responsibility readily.
 
 . *Working harder*: an inability to switch off.
 
@@ -295,9 +295,9 @@ Similar to the symptoms, sufferers may experience episodes in multiple phases, n
 
 . *Withdrawal*; social life small or non-existent, need to feel relief from stress, alcohol/drugs.
 
-. *Odd Behavioural Changes*: changes in behaviour obvious; friends and family concerned.
+. *Odd Behavioral Changes*: changes in behavior obvious; friends and family concerned.
 
-. *Depersonalisation*: seeing neither self nor others as valuable, and no longer perceive own needs.
+. *Depersonalization*: seeing neither self nor others as valuable, and no longer perceive own needs.
 
 . *Inner Emptiness*: feeling empty inside and to overcome this, look for activity such as overeating, sex, alcohol, or drugs; activities are often exaggerated.
 
@@ -313,7 +313,7 @@ It’s important to be self-critical and pierce our disillusion that everything 
 
 We’ve identify the devastating affects of burnout now lets explore the possible sources to these symptoms within our role or even within the community. 
 
-We earlier described that burnout is a combination of many factors but a recurring element is the realisation, subconsciously or not, that we don’t feel our work is providing us the same sense of reward and purpose as it had once done before. 
+We earlier described that burnout is a combination of many factors but a recurring element is the realization, subconsciously or not, that we don’t feel our work is providing us the same sense of reward and purpose as it had once done before. 
 Rewards doesn’t always equate to money or status but can simply be the deeper satisfaction and pleasure in the adhering to one’s values and achieving happiness.
 
 *Lack of Control*
@@ -322,14 +322,14 @@ To feel a sense of accomplishment and ownership of a task, a role requires a sui
 If we have the inability to influence our decisions or don’t have access to appropriate tools or resources, this can lead to the de-motivating feeling that our work and effort is not being appreciated enough or we are not trusted enough with this responsibility.
 
 Lack of control can also manifest when dealing with other peoples’ emotions. 
-Although we can encourage and try to direct our members to adhere to our community’s code of conduct or a preferred course of action in a conflict, we evidently can not remove their wilfulness. 
+Although we can encourage and try to direct our members to adhere to our community’s code of conduct or a preferred course of action in a conflict, we evidently can not remove their willfulness. 
 We must only pre-empt their next move no matter how disastrous it may be. 
 This can lead to the feeling of constantly fire fighting and not accomplishing anything.
 
 *Unfairness*
 
 Unfairness within the role can be viewed as a number of different things that attribute to one’s feeling powerless or being disrespected. 
-Either you or others are treated unfairly: office or community politics that creates a culture of favouritism, lack of transparency in the top down decisions, or a disproportionate amount of workload is allocated to you.
+Either you or others are treated unfairly: office or community politics that creates a culture of favoritism, lack of transparency in the top down decisions, or a disproportionate amount of workload is allocated to you.
 
 *Insufficient Reward*
 
@@ -340,7 +340,7 @@ We also need social rewards where we gain the recognition from others.
 A lack of recognition can be from the our company itself not appreciating our worth: the team’s lack of respect towards us, or from the community not seeing all the “behind the scenes” activities we perform.
 
 Intrinsic rewards are also important to maintain a healthy perceptive on our role. 
-This is where you take the self-acknowledgement of doing a good job and feel accomplished. 
+This is where you take the self-acknowledgment of doing a good job and feel accomplished. 
 When we feel we aren’t living up to our standards we begin to feel disappointed and become de-motivated.
 
 Sometimes we feel unsatisfied because we have a conflict of personal values with the company or project we work with. 
@@ -364,7 +364,7 @@ If you feel yourself or anyone else succumbing to burnout then the most direct a
 
 *1. Use your holiday time*
 
-Don’t be afraid to utilise this time and don’t feel guilty either. 
+Don’t be afraid to utilize this time and don’t feel guilty either. 
 Using your holiday does not demerit your dedication to the role, neither does it mean that everything will fall apart whilst away. 
 Use this time to concentrate on yourself, and what gives you pleasure in life.
 
@@ -380,16 +380,16 @@ Remember, other people’s emotions can affect us both positive and negatively.
 *3. Re-evaluate priorities*
 
 Identify what is important to you and reflect upon if your current lifestyle, or work life balance mirrors that. 
-If they don’t then prioritise what you wish to enjoy more and block out time in your schedule and commit to it.
+If they don’t then priorities what you wish to enjoy more and block out time in your schedule and commit to it.
 
 Also evaluate your options and consider what the next steps would be to resolve the stressors you have. 
 This could be coming to a solution or compromises with your line manager to reduce workload or other concerns you have. 
 There may be a point that the only way to remove certain stressors in your life is to leave your job to improve your health.
 
-*4. Practise self-care*
+*4. Practice self-care*
 
 Take the time to commit yourself fully to what ever self-care activity you want to enjoy and do it. 
-Try and practise self-care daily, detaching yourself from as much work as possible and devote yourself to some “me” time. 
+Try and practice self-care daily, detaching yourself from as much work as possible and devote yourself to some “me” time. 
 
 *5. Seek professional help*
 
@@ -410,7 +410,7 @@ We can feel that its a requirement of our role to be available 24/7 and be respo
 This is often not the case and that in fact is counter productive in building a sustainable community and providing quality interactions with our members. 
 Leaders don’t need to respond to all messages to be great.
 
-Each person’s work life balance is different with each their own prioritises. 
+Each person’s work life balance is different with each their own prioritizes. 
 This is where self-care activities play a big part in establishing the distinction between work and personal life. 
 Make a clear differentiation of what you view as work, like answering community requests or emails, arrange calls or meetings etc and the hours that you aim to dedicate those to, anything outside of that communicate to yourself and to others that is your personal time.
 By dedicating a consistent and explicit downtime, we begin to develop a habit that our body and mind anticipates and begins to look forward to thus easier to develop a good habit to maintain.
@@ -435,7 +435,7 @@ We can also find that this need to achieve is a reaction to a heavy workload fro
 
 Reconsider these goals with the aim to reduce your workload. 
 Are they achievable and maintainable with the current resources without sacrificing quality and a good work/life balance? 
-If they aren’t then consider prioritising and communicating the most impactful goals that the team can achieve. 
+If they aren’t then consider prioritizing and communicating the most impactful goals that the team can achieve. 
 Delegate any other tasks to suitable members or establish more flexible timelines, and anticipate time for possible firefighting as part of those deadlines.
 
 Not only does this help to set reasonable expectations for the team members to achieve, but also promotes that a healthy work/life balance is an integral part of their schedule. 
@@ -459,9 +459,9 @@ This helps encourages the mentality that everyone can lighten the load especiall
 
 Maintaining personal boundaries is also extremely important as well. 
 Our role often asks us to help members with their workload but also interpersonal communication on matters either between other team members. 
-But we need to be aware and recognise that we can’t solve every interpersonal issue or conflict – sometimes we just can’t become too involved.
+But we need to be aware and recognize that we can’t solve every interpersonal issue or conflict – sometimes we just can’t become too involved.
 
-As much as we don’t want to admit it, we must respect that we are not skilled or obligated to practise therapy if we feel it is required for a particular member. 
+As much as we don’t want to admit it, we must respect that we are not skilled or obligated to practice therapy if we feel it is required for a particular member. 
 When the conversations or observations become more apparent then aim to persuade them to seek medical or psychiatric help. 
 Our role is to aid members, but there is only so much we can achieve from our position and that is OK.
 
@@ -477,7 +477,7 @@ But there is a lot of work to be done to achieve this, and we need to ensure we 
 Things become unsustainable when we have set unrealistic expectations either upon  ourselves or on the community. 
 When it comes to ourselves we can under estimate our project timelines because we have attributed our motivation as part of the estimation: the drive that will get us over the last hurdle. 
 Motivation is not on unlimited supply and can fluctuate drastically due to external and internal factors. 
-Try to extract motivation as a factor, although you may feel extremely excited about a project, don’t let that cloud your judgement on how long a project will take to complete. 
+Try to extract motivation as a factor, although you may feel extremely excited about a project, don’t let that cloud your judgment on how long a project will take to complete. 
 If not, you may see it negatively affecting your work life balance.
 
 We tend to also inaccurately assume the motivation of others in the community. 
@@ -505,7 +505,7 @@ Introspections are the examination of one’s own conscious thoughts and feeling
 This can refer to the mental state or in a spiritual sense, one’s soul. 
 Self-reflection, introspections and self-care are all intertwined with the aim to promote and sustain a positive direction for mental growth and development.
 
-Introspection is extremely important for ourselves to evaluate our purpose and happiness we get from our actions, thoughts and behaviour. 
+Introspection is extremely important for ourselves to evaluate our purpose and happiness we get from our actions, thoughts and behavior. 
 Work is an extremely big part of our lives so ensuring that our role, not only within the community, but the company itself, their values align with ours. 
 Else we will find ourselves becoming more and more dissatisfied by the role’s insufficient rewards.
 
@@ -513,20 +513,20 @@ But first we need to know what our values are, what qualities we you enjoy of th
 
 Take some time to truly answer these as gaining this self-awareness does not happen over night.
 Use them to help you reflect on how you feel when you do the things you do, both positively and negatively. 
-Journaling is a often a good, yet simple, practise you can do to clarify your thoughts.
+Journaling is a often a good, yet simple, practice you can do to clarify your thoughts.
 
-Practising self-reflection can be difficult to begin with due to previously discussed inner restrictions we place upon ourselves as community leaders: the need of being invincible; distorted perception of our worth; and lack of visible support. 
+Practicing self-reflection can be difficult to begin with due to previously discussed inner restrictions we place upon ourselves as community leaders: the need of being invincible; distorted perception of our worth; and lack of visible support. 
 However creating a routine of introspection and self-reflection as part of our self-care we will begin to exercise more control over our emotions: have inner clarity on our long term goals, and ability to identify more solutions-focused activities rather than the previously emotionally driven ones.
 
 === Tackling Imposter Syndrome
 
 This term was first defined by psychologists Dr Pauline Clance and Dr Suzanne Imes in the 1970’s as the internal experience one feels, despite overwhelming amount of evidence proving other wise, that they are incompetent and that their success was a product of luck or fraud within their field of expertise.
 
-Often those that experience imposter syndrome have a hard time internalising and accepting their success by minimising positive feedback and comparing other’s work to their own. 
+Often those that experience impostor syndrome have a hard time internalizing and accepting their success by minimizing positive feedback and comparing other’s work to their own. 
 This more frequently happens if we have started a new job, take on new responsibilities or role, or returned from a recent career break. 
 In order to compensate for this chronic self-doubt we begin to work late, procrastinate or try and justify our position in unnecessary ways.
 
-Dr Valerie Young, further categorised these types of flawed thinking of what sufferers believe it takes to be component into the following subgroups:
+Dr Valerie Young, further categorized these types of flawed thinking of what sufferers believe it takes to be component into the following subgroups:
 
 *Perfectionist*
 
@@ -547,7 +547,7 @@ Although being independent is good, it can lead to sub par results without ackno
 
 *Expert*
 
-People with this complex of imposter syndrome often dismiss their success because they don’t know everything there is to know about the topic or role. 
+People with this complex of impostor syndrome often dismiss their success because they don’t know everything there is to know about the topic or role. 
 Often these people dislike to be put on the spot in case there is some aspect they were unaware of and thus exposed as a fraud.
 
 *Superhuman*
@@ -558,7 +558,7 @@ Usually these people often over compare themselves to others in their industry, 
 Since our role as community managers is relatively new and less established than other roles within the tech industry we can find ourselves struggling to easily define and confirm our decisions due to the lack of expertise and documentation in this field. 
 We can find ourselves feeling more aware of being identified as a fraud especially when the company or project has never had a community manager before.
 
-However, there are ways to help keep imposter syndrome in check and increase your self confidence.
+However, there are ways to help keep impostor syndrome in check and increase your self confidence.
 
 *Celebrate Successes*
 
@@ -569,13 +569,13 @@ This will help support that feeling that we are contributing value in our role a
 
 *Change your perspective*
 
-“We don’t attach to people or things, we attach to uninvestigated concepts that we believe to be true in the moment” - Byron Katie
+> “We don’t attach to people or things, we attach to uninvestigated concepts that we believe to be true in the moment” - Byron Katie
 
 We are hindered by our fear of being exposed as a fraud, but usually we don’t have the proof that confirms that is the case. 
 We often wrongly assume and interpret actions of others as a direct cause and affect to things we have done or said. 
 This is because we are viewing the situation from our perspective and only from ours. 
 
-Concentrate on what value your work brings to the subject or community and visualise that success. 
+Concentrate on what value your work brings to the subject or community and visualize that success. 
 Imagining good things happening can give you the confidence, and motivation, to commit to the task at hand and overcome the fear.
 
 *Working in progress*
@@ -591,7 +591,7 @@ So why do we feel we can’t have the same mentality to helping ourselves?
 
 Having a strong social support network is essential to help us through the stress of tough times, whether it could be just a bad day at work, or more chronic episodes of illness.
 Without a social support network it can feel lonely and isolating which can lead into further depression and anxiety. 
-Often it’s our social support network, even if we don’t think we have one, that first spots there is a change with our behaviour before we do.
+Often it’s our social support network, even if we don’t think we have one, that first spots there is a change with our behavior before we do.
 
 A social support network is made up of friends, family and peers. 
 Although this is different from a support group, which is more formal and often prescribed, a social support network is something we can develop as part of our community and team structure to help tackle stress, and promote self-care.
@@ -603,9 +603,9 @@ This unburdening of tension helps untangle your emotions, seek clarity on an asp
 We may find that those within the community, which we spend most of our time with, grow to be included in our social support network and that each individual provides us with a unique form of support to help in different ways in our lives. 
 But also remember that we should also serve as a form of support to others.
 
-The more education and communicating with our members about the benefits of self-care, the more likely we will see It being practised and encouraged by others. 
+The more education and communicating with our members about the benefits of self-care, the more likely we will see It being practiced and encouraged by others. 
 This in turns helps create a more caring and accepting atmosphere in the community.
-Education can be in the form of discussions promoting self-care, celebrating mental health campaigns, adding to the community guidelines when on-boarding team members to speak to the team if their workload, or other aspects is affecting their health, or organising training for team members on mental health awareness. 
+Education can be in the form of discussions promoting self-care, celebrating mental health campaigns, adding to the community guidelines when on-boarding team members to speak to the team if their workload, or other aspects is affecting their health, or organizing training for team members on mental health awareness. 
 
 If you see a member on the team or community showing symptoms of burnout then reach out to them and let them know that you are concerned for their well being. 
 Identify that you are there to support them and more often they will respond positively and work together to elevate their stress.
